<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/llHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:orientation="vertical"
        android:paddingTop="48dp">

        <Button
            android:id="@+id/btnKalkuApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aplikasi_kalkulator" />

        <Button
            android:id="@+id/btnInputApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aplikasi_input_nama"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/btnListApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aplikasi_list_view"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/ivHome"
        android:layout_width="148dp"
        android:layout_height="34dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/logo_dts"
        app:layout_constraintBottom_toTopOf="@+id/tvHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/created_by_fachmi_dimas"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>